# ai_content_service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
alembic/: env.py
alembic/versions/: 22f993cffca6_init_database.py
app/: README.md  main.py
app/core/: celery_worker.py  db.py
app/models/: __init__.py  article.py  article_generation_log.py  keyword.py
app/prompt/: instruction.json
app/repositories/: __init__.py  article_repository.py  keyword_repository.py  log_repository.py
app/services/: ai_provider.py  article_generation_service.py  google_trends_rss_client.py  prompt_builder.py
docker/: ai_content_service.dockerfile
